# lesspython

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: p.py
examples/arg_sequence/: args.py
examples/assignments/: assi.py  assi2.py
examples/async/: asyncdup.py
examples/attr_vs_local/: attr_vs_local.py
examples/attributes/: attr.py
examples/attributes_instance/: attr_instance.py
examples/blank_lines/: blank.py
examples/class_attributes/: c.py
examples/classes/: class_body.py  class_dup.py
examples/closure/: closure.py
examples/comments/: comments.py
examples/comprehension/: comp.py
examples/cross/: a.py  b.py
examples/dict_literals/: dicts.py
examples/errors/: good.py
examples/exclude/: ex1.py  ex2.py
examples/free_names/: free_names.py
examples/function_call/: p.py
examples/global/: global_example.py
examples/global_conditional/: f1.py  f2.py
examples/hybrid_swap/: swap.py
examples/if_else/: ifdup.py
examples/ignore/: ignore.py
examples/ignore_nested/: ignore_nested.py
examples/imports/: imports.py  imports2.py
examples/literals/: lit.py
examples/loop_summary/: summary.py
examples/loops/: loopdup.py
examples/loops_negative/: loops_negative.py
examples/match_case/: matchdup.py
examples/noise/: noise.py
examples/none/: readme.txt
examples/nonlocal/: nonlocal_example.py  nonlocal_mismatch.py
examples/patterns/: patterns.py
examples/sequence/: seq.py
lesspython/: __init__.py  __main__.py  cli.py  core.py  dup_fragments.py  report.py
tests/: test_dup_fragments.py
(+4 files in other folders)
