[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lesspython"
version = "0.0.0"
description = "Find duplicated Python code fragments via AST hashing"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "ty",
]

[project.scripts]
lesspython = "lesspython.cli:app"

[tool.setuptools.packages.find]
where = ["."]

